[package]
name = "oh-my-memory"
version = "0.1.0"
edition = "2024"
description = "A process-first, low-overhead Rust memory management assistant for heavy local LLM workflows."
license = "MIT"
repository = "https://github.com/shaun0927/oh-my-memory"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
